Closed
Bug 187866
Opened 23 years ago
Closed 23 years ago
English text overflows Arabic in RTL pages
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Ossamak, Assigned: smontagu)
References
()
Details
(Keywords: rtl)
Attachments
(6 files)
|
113.58 KB,
image/png
|
Details | |
|
97.16 KB,
image/png
|
Details | |
|
1.25 KB,
text/html
|
Details | |
|
2.43 KB,
patch
|
Details | Diff | Splinter Review | |
|
2.44 KB,
patch
|
sfraser_bugs
:
review+
rbs
:
superreview+
|
Details | Diff | Splinter Review |
|
58.83 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3a) Gecko/20021212
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3a) Gecko/20021212
In the URL provided
(http://www.ccse.kfupm.edu.sa/~husni/ICS484/WebPAges/Munawes/Aracbic.htm),
English text in some pages flows over the next few letters of Arabic text. The
effect is obvious if you have Bold text.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
If you view the same page in IE it works fine.
| Reporter | ||
Comment 1•23 years ago
|
||
| Reporter | ||
Comment 2•23 years ago
|
||
| Assignee | ||
Comment 3•23 years ago
|
||
I can reproduce this bug in older builds (e.g. Netscape 7.01 and Mozilla 1.2
final, but not in an up-to-date trunk build. It was probably fixed by bug
131023. Ossama, can you test with a nightly build?
Component: BiDi Hebrew & Arabic → Layout: Fonts and Text
| Reporter | ||
Comment 4•23 years ago
|
||
I installed the last build and tried the same URL but the problem is still there.
This is the build version
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3b) Gecko/20030106
Comment 5•23 years ago
|
||
Confirming using mozilla 2003010604 and phoenix 0.5 on WinXP
This bug only affects justified Arabic text rendered using "Traditional Arabic."
I see no problems with "Times new Roman" or "Tahoma".
See the attached testcase.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•23 years ago
|
||
| Assignee | ||
Comment 7•23 years ago
|
||
Accepting. I discovered that the reason that I couldn't reproduce the bug before
in my build was that I had turned off the flag at
http://lxr.mozilla.org/seamonkey/source/gfx/src/windows/nsRenderingContextWin.cpp#655
which makes Windows use its own shaping routines instead of Mozilla's.
It might be better to ignore NS_RENDERING_HINT_ARABIC_SHAPING anyway for
justified text. We already ignore NS_RENDERING_HINT_BIDI_REORDERING, and
ignoring one and not the other is probably problematical.
Assignee: mkaply → smontagu
| Assignee | ||
Comment 8•23 years ago
|
||
This is equivalent to code which already exists in PaintTextSlowly() and
GetPositionSlowly(). Not having the same condition in Reflow() was causing
inconsistencies.
| Assignee | ||
Comment 9•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #111004 -
Flags: review?(sfraser)
Updated•23 years ago
|
Attachment #111004 -
Flags: review?(sfraser) → review+
| Assignee | ||
Updated•23 years ago
|
Attachment #111004 -
Flags: superreview?(rbs)
Attachment #111004 -
Flags: superreview?(rbs) → superreview+
| Assignee | ||
Comment 10•23 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 11•23 years ago
|
||
Thank you very much Simon. It's now solved. I'll attach a screen
shot also.
| Reporter | ||
Comment 12•23 years ago
|
||
Comment 13•18 years ago
|
||
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
You need to log in
before you can comment on or make changes to this bug.
Description
•