Corrections to measurement of justified Arabic text. Bug 187866, r=sfraser, sr=rbs@maths.uq.edu.au.